# Voltaic

./: .gitattributes  .gitignore  CHANGES.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: .npmrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
app/src/components/: ComingSoon.css  ComingSoon.tsx  CommandPalette.css  CommandPalette.tsx  ContainerSession.tsx  ContextMenu.css  ContextMenu.tsx  FileIcon.tsx  FtpBrowser.tsx  NewSessionModal.css  NewSessionModal.tsx  RdpView.css  RdpView.tsx  SerialConsole.css  SerialConsole.tsx  SettingsModal.css  SettingsModal.tsx  SftpBrowser.css  SftpBrowser.tsx  Sidebar.css  Sidebar.tsx  SidebarFiles.tsx  SshConnectForm.css  SshConnectForm.tsx  SshSession.tsx  TabBar.css  TabBar.tsx  TerminalView.css  TerminalView.tsx  TitleBar.css  TitleBar.tsx  TooltipPortal.tsx  VncView.tsx  Welcome.css  Welcome.tsx  icons.tsx
app/src/i18n/: index.ts
app/src/i18n/locales/: en.json  es.json
app/src/lib/: appearance.ts  ipc.ts  mobaxterm.ts  rdpKeymap.ts  secrets.ts  sessionTransfer.ts  types.ts  useFileDrop.ts  vncKeymap.ts
app/src/store/: appStore.ts
app/src/styles/: global.css  tokens.css
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  lib.rs  model.rs  plugin.rs
crates/docker/: Cargo.toml
crates/docker/src/: lib.rs
crates/ftp/: Cargo.toml
crates/ftp/src/: lib.rs
crates/kubernetes/: Cargo.toml
crates/kubernetes/src/: lib.rs
crates/rdp/: Cargo.toml
crates/rdp/src/: lib.rs
crates/serial/: Cargo.toml
crates/serial/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: config.rs  lib.rs  logging.rs  paths.rs  store.rs
crates/sftp/: Cargo.toml
crates/sftp/src/: lib.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: client.rs  config.rs  lib.rs  shell.rs  tunnel.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
crates/updater/: Cargo.toml  build.rs  voltaic-updater.manifest
crates/updater/src/: lib.rs
crates/vnc/: Cargo.toml
crates/vnc/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
