[package]
name = "voltaic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Voltaic — a modern, modular MobaXterm-class connection manager."
default-run = "voltaic"

[lib]
name = "voltaic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voltaic"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Voltaic crates
voltaic-core = { workspace = true }
voltaic-settings = { workspace = true }
voltaic-terminal = { workspace = true }
voltaic-ssh = { workspace = true }
voltaic-sftp = { workspace = true }
voltaic-ftp = { workspace = true }
voltaic-serial = { workspace = true }
voltaic-rdp = { workspace = true }
voltaic-vnc = { workspace = true }
voltaic-workspace = { workspace = true }
voltaic-updater = { workspace = true }

# Tauri runtime
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# OS keychain for credential storage (native backends per platform).
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

# Shared
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

[features]
# Default to using a webview-served frontend in production.
custom-protocol = ["tauri/custom-protocol"]
