[package]
name = "voltaic-docker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker panel: containers, images, networks, volumes, logs, exec."

[lints]
workspace = true

[dependencies]
voltaic-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
