[package]
name = "voltaic-rdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RDP client: saved connections, multi-session, fullscreen, multi-monitor, clipboard."

[lints]
workspace = true

[dependencies]
voltaic-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ironrdp = { workspace = true }
ironrdp-async = { workspace = true }
ironrdp-tokio = { workspace = true }
ironrdp-tls = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
