[package]
name = "voltaic-serial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Serial console: COM/USB serial ports, advanced config, logging."

[lints]
workspace = true

[dependencies]
voltaic-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serialport = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
